# cfb-analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yaml
data/csv/: cfb_team.csv  cfb_team.xlsx
data/datasets/: 2027_team.csv  2027_team.xlsx  2028_team.csv  2028_team.xlsx  roster_fresno_state.xlsx  roster_san_diego_state.xlsx  roster_stanford.xlsx
notebooks/: cfb_roster_analysis.py  players_leaving.py  roster_analysis.py  roster_analysis_new.py  roster_comparison.py  team.py  utilities.py
notebooks/public/: head.html
