[project]
name = "cfb-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=5.5.0",
    "duckdb>=1.1.3",
    "marimo>=0.10.7",
    "polars[openpyxl]>=1.18.0",
]

[dependency-groups]
dev = [
    "fastexcel>=0.12.1",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.4",
    "nbformat>=5.10.4",
    "ruff>=0.8.4",
    "xlsxwriter>=3.2.0",
]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
