[project]
name = "cfb-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=5.5.0",
    "duckdb>=1.1.3",
    "kaleido==0.2.1",
    "marimo>=0.10.7",
    "matplotlib>=3.10.0",
    "plotly>=6.0.0",
    "polars[openpyxl]>=1.18.0",
    "vegafusion==2.0.1",
]

[dependency-groups]
dev = [
    "fastexcel>=0.12.1",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.4",
    "nbformat>=5.10.4",
    "ruff>=0.8.4",
    "xlsxwriter>=3.2.0",
]

[tool.ruff.lint.isort]
known-first-party = ["utilities"]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
