[project]
name = "cfb-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=5.5.0",
    "fastexcel>=0.13.0",
    "httpx>=0.28.1",
    "marimo==0.11.21",
    "plotly>=6.0.0",
    "polars[openpyxl]>=1.18.0",
    "xlsxwriter>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[tool.ruff.lint.isort]
known-first-party = ["utilities"]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
